# rf_inventory_optimization

./: .gitignore  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yaml  ci.yaml
src/: model.py  qlearning.py
src/RLInventoryOpt/: qlearning.py
src/utils/: inference.py  plotting.py
